@@ -2,7 +2,10 @@
 
 	* Display/GAIA.pm: Check return value of recv() to prevent
 	infinite loops.
-
+	(launch): Simplify the launch sequence.
+	(send_to_gaia):	Fix problems with Solaris recv() not returning
+	status [had to check $! explcitly]
+	
 2000-02-23  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Fix POD errors using podchecker
